Updated the files

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20px">
     <tr>
-      <td><img src="https://media-exp1.licdn.com/dms/image/C4E03AQH3w-ytNjriXg/profile-displayphoto-shrink_800_800/0/1617356360906?e=1629331200&v=beta&t=Jje7iR6SCTy0t8H-oFwMbvBguEVyz2XNuzyf8QD14OA" alt="Topzy"></td>
+      <td><img src="tope.png" alt="Topzy"></td>
       <td>
         <h1>TEMITOPE OLUTADE </h1>
         <p><em>Founder amd CTO of <a href="https://www.instagram.com/Temitope_olutade">Temitope Talking Drum Studio</a> </em></p>
